--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@
   background-color: #ffffff;
 }
 
+.webstudio .png .web {
+  text-color: #4d5ae5;
+}
+
+.webstudio .png .studio {
+  text-color: #2e2f42;
+}
+
 .global-header .main-nav a,
 .global-header .main-nav a:visited {
   color: var=(--link-color);
@@ -31,4 +39,40 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+.hero-section .hero-title {
+  background-color: var(--link-color_hover);
+  width: 1440px;
+  height: 600px;
+  top: 72px;
+}
+
+.button-servise {
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  color: var(--link-color);
+  width: 169px;
+  height: 56px;
+  top: 428px;
+  padding: 16px, 32px, 16px, 32px;
+  font-size: 16px;
+  line-height: 24px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.logo::after {
+  content: "STUDIO";
+  color: #2e2f42;
+}
+
+.global-footer .footer-title {
+  background-color: #2e2f42;
+  color: #f4f4fd;
+}
+
+.logo-footer::after {
+  content: "STUDIO";
+  color: red;
 }
