--- a/Portofolio.css
+++ b/Portofolio.css
@@ -35,17 +35,72 @@ ul {
   cursor: pointer;
 }
 
-.button-first {
+.button-all {
   background-color: #404bbf;
   border-radius: 4px;
   color: var(--link-color);
   width: 69px;
   height: 48px;
-  top: 428px;
   padding: 12px, 24px, 12px, 24px;
   font-size: 16px;
   line-height: 24px;
   cursor: pointer;
+}
+
+.button-webstile {
+  background-color: #404bbf;
+  border-radius: 4px;
+  color: #f4f4fd;
+  width: 116px;
+  height: 48px;
+  padding: 12px, 24px, 12px, 24px;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
+}
+
+.button-app {
+  background-color: #404bbf;
+  border-radius: 4px;
+  color: #f4f4fd;
+  width: 78px;
+  height: 48px;
+  padding: 12px, 24px, 12px, 24px;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
+}
+
+.button-designe {
+  background-color: #404bbf;
+  border-radius: 4px;
+  color: #f4f4fd;
+  width: 101px;
+  height: 48px;
+  padding: 12px, 24px, 12px, 24px;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
+}
+
+.button-marketing {
+  background-color: #404bbf;
+  border-radius: 4px;
+  color: #f4f4fd;
+  width: 126px;
+  height: 48px;
+  padding: 12px, 24px, 12px, 24px;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
 }
 
 .logo::after {
@@ -60,5 +115,5 @@ ul {
 
 .logo-footer::after {
   content: "STUDIO";
-  color: red;
+  color: #f4f4fd;
 }
