--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ a {
   background-color: var(--link-color_hover);
   width: 1440px;
   height: 600px;
-  top: 72px;
 }
 
 .button-servise {
@@ -58,7 +57,6 @@ a {
   padding: 16px, 32px, 16px, 32px;
   font-size: 16px;
   line-height: 24px;
-  gap: 10px;
   cursor: pointer;
 }
 
@@ -74,5 +72,5 @@ a {
 
 .logo-footer::after {
   content: "STUDIO";
-  color: red;
+  color: #f4f4fd;
 }
